--- a/perfect/src/app/form/form.component.html
+++ b/perfect/src/app/form/form.component.html
@@ -1,3 +1,24 @@
-<p>
-  form works!
-</p>
+<form [formGroup]="registerForm">
+  <div class="form-group">
+    <label for="firstName">FirstName</label>
+    <input type="text" formControlName = "sushFirstName" class="form-control" id="firstName" placeholder="FirstName">
+  </div>
+  <div class="form-group">
+    <label for="lastName">LastName</label>
+    <input type="text" formControlName= "sushLastName" class="form-control" id="lastName" placeholder="LastName">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email address</label>
+    <input type="email" formControlName="sushEmail" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" formControlName="sushPassword" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+  <div class="form-check">
+    <input type="checkbox" formControlName= "sushCheck" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+  </div>
+  <button type="submit" (click)="save()" class="btn btn-primary">Submit</button>
+</form>
